# muesli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  install.sh  libmodels.rlib  release.sh
.github/workflows/: ci.yml  release.yml
assets/: hyprland-keybindings.conf  muesli.service  waybar-muesli.json
examples/: test_notify.rs
src/: error.rs  lib.rs  main.rs
src/audio/: capture.rs  convert.rs  loopback.rs  mixer.rs  mod.rs  recorder.rs
src/cli/: commands.rs  handlers.rs  mod.rs
src/config/: loader.rs  settings.rs
src/daemon/: client.rs  mod.rs  protocol.rs  server.rs
src/detection/: detector.rs  hyprland.rs  mod.rs  patterns.rs
src/llm/: catalog.rs  chunking.rs  claude.rs  local.rs  mod.rs  openai.rs  openai_compat.rs  prompts.rs
src/notes/: markdown.rs  mod.rs
src/notification/: audio.rs  mako.rs  mod.rs  prompt.rs
src/qmd/: ask.rs  indexer.rs  mod.rs  search.rs
src/storage/: database.rs  migrations.rs  mod.rs
src/transcription/: deepgram.rs  diarization.rs  diarization_models.rs  mod.rs  models.rs  openai.rs  parakeet.rs  parakeet_models.rs  streaming.rs  whisper.rs
src/waybar/: mod.rs
