[package]
name = "muesli"
version = "0.1.0"
edition = "2021"
description = "AI-powered meeting note-taker for Linux/Hyprland"
license = "MIT"

[[bin]]
name = "muesli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Config
directories = "5.0"

# Audio
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
bytemuck = "1.14"

# Transcription - use git for whisper-rs
whisper-rs = { git = "https://codeberg.org/tazz4843/whisper-rs.git" }

# Hyprland
hyprland = "0.4.0-beta.3"

# Notifications
notify-rust = "4"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client (for hosted APIs)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"

[dev-dependencies]
tempfile = "3.10"
