[package]
name = "muesli"
version = "0.2.0"
edition = "2021"
description = "AI-powered meeting note-taker for Linux/Hyprland"
license = "MIT"

[[bin]]
name = "muesli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Config
directories = "5.0"

# Audio
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
bytemuck = "1.14"
rodio = "0.19"

# Transcription
whisper-rs = { git = "https://codeberg.org/tazz4843/whisper-rs.git" }
parakeet-rs = { version = "0.3", features = ["sortformer"] }

# Hyprland
hyprland = "0.4.0-beta.3"

# Notifications
notify-rust = "4"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client (for hosted APIs)
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"

[features]
default = []
vulkan = ["whisper-rs/vulkan"]
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]

[build-dependencies]
ureq = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
